# rag-langchain-starter

./: .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt  test.py
AmbedkarGPT/: README.md  main.py  pyproject.toml  requirements.txt
AmbedkarGPT/src/ingestion/: embed.py  load.py  split.py  store.py
AmbedkarGPT/src/retrieval/: generate.py
AmbedkarGPT/test/: test.py
src/: ingest.py
src/core/: config.py
src/ingestion/: classify.py  classify_llm.py  embed.py  load.py  split.py  store.py
src/ingestion/loaders/: excel.py  pdf.py
src/retrieval/: generate.py  search.py
src/skills/: book_skill.md  default_skill.md  presentation_skill.md  spreadsheet_skill.md
src/utils/: skill_loader.py
