[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.2",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
]
