[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "docx2txt>=0.9",
    "fastapi>=0.116.2",
    "flashrank>=0.2.10",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-cohere>=0.4.6",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.30",
    "python-pptx>=1.0.2",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.21",
    "unstructured-inference>=1.6.11",
    "uvicorn[standard]>=0.35.0",
]
